--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
+    "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "^5.3.2",
